set version to 2.2.2 and fixed some issues

--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -3,52 +3,11 @@
 # subfolder in a code repository. This path must be absolute.
 dags_folder = /usr/local/airflow/dags
 
-# The folder where airflow should store its log files
-# This path must be absolute
-base_log_folder = /usr/local/airflow/logs
-
-# Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
-# Set this to True if you want to enable remote logging.
-remote_logging = False
-
 # Users must supply an Airflow connection id that provides access to the storage
 # location.
 remote_log_conn_id =
 remote_base_log_folder =
 encrypt_s3_logs = False
-
-# Logging level
-logging_level = INFO
-
-# Logging level for Flask-appbuilder UI
-fab_logging_level = WARN
-
-# Logging class
-# Specify the class that will specify the logging configuration
-# This class has to be on the python classpath
-# Example: logging_config_class = my.path.default_local_settings.LOGGING_CONFIG
-logging_config_class =
-
-# Flag to enable/disable Colored logs in Console
-# Colour the logs when the controlling terminal is a TTY.
-colored_console_log = True
-
-# Log format for when Colored logs is enabled
-colored_log_format = [%%(blue)s%%(asctime)s%%(reset)s] {{%%(blue)s%%(filename)s:%%(reset)s%%(lineno)d}} %%(log_color)s%%(levelname)s%%(reset)s - %%(log_color)s%%(message)s%%(reset)s
-colored_formatter_class = airflow.utils.log.colored_log.CustomTTYColoredFormatter
-
-# Format of Log line
-log_format = [%%(asctime)s] {{%%(filename)s:%%(lineno)d}} %%(levelname)s - %%(message)s
-simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
-
-# Log filename format
-log_filename_template = {{ ti.dag_id }}/{{ ti.task_id }}/{{ ts }}/{{ try_number }}.log
-log_processor_filename_template = {{ filename }}.log
-dag_processor_manager_log_location = /usr/local/airflow/logs/dag_processor_manager/dag_processor_manager.log
-
-# Name of handler to read task instance logs.
-# Default to use task handler.
-task_log_reader = task
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package:function".
@@ -58,7 +17,7 @@ task_log_reader = task
 #
 # No argument should be required in the function specified.
 # If using IP address as hostname is preferred, use value ``airflow.utils.net:get_host_ip_address``
-hostname_callable = socket:getfqdn
+hostname_callable = socket.getfqdn
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
@@ -195,6 +154,9 @@ min_serialized_dag_update_interval = 30
 # On each dagrun check against defined SLAs
 check_slas = True
 
+# UI to hide sensitive variable fields when set to True
+hide_sensitive_variable_fields = True
+
 [cli]
 # In what way should the cli access the API. The LocalClient will use the
 # database directly, while the json_client will use the api running on the
@@ -234,6 +196,9 @@ default_cpus = 1
 default_ram = 512
 default_disk = 512
 default_gpus = 0
+
+# Default queue that tasks get assigned to and that worker listen on.
+default_queue = default
 
 [hive]
 # Default mapreduce queue for HiveOperator tasks
@@ -349,7 +314,7 @@ page_size = 100
 rbac = False
 
 # Define the color of navigation bar
-navbar_color = #007A87
+navbar_color = #fff
 
 # Default dagrun to show in UI
 default_dag_run_display_number = 25
@@ -484,9 +449,6 @@ flower_port = 5555
 # Accepts user:password pairs separated by a comma
 # Example: flower_basic_auth = user1:password1,user2:password2
 flower_basic_auth =
-
-# Default queue that tasks get assigned to and that worker listen on.
-default_queue = default
 
 # How many processes CeleryExecutor uses to sync task state.
 # 0 means to use max(1, number of cores - 1) processes.
@@ -698,10 +660,6 @@ keytab = airflow.keytab
 
 [github_enterprise]
 api_rev = v3
-
-[admin]
-# UI to hide sensitive variable fields when set to True
-hide_sensitive_variable_fields = True
 
 [elasticsearch]
 # Elasticsearch host
@@ -988,3 +946,45 @@ fs_group =
 # The worker pods will be given these static labels, as well as some additional dynamic labels
 # to identify the task.
 # Should be supplied in the format: ``key = value``
+
+[logging]
+# Logging level
+logging_level = INFO
+
+# Logging level for Flask-appbuilder UI
+fab_logging_level = WARN
+
+# Logging class
+# Specify the class that will specify the logging configuration
+# This class has to be on the python classpath
+# Example: logging_config_class = my.path.default_local_settings.LOGGING_CONFIG
+logging_config_class =
+
+# Flag to enable/disable Colored logs in Console
+# Colour the logs when the controlling terminal is a TTY.
+colored_console_log = True
+
+# Log format for when Colored logs is enabled
+colored_log_format = [%%(blue)s%%(asctime)s%%(reset)s] {{%%(blue)s%%(filename)s:%%(reset)s%%(lineno)d}} %%(log_color)s%%(levelname)s%%(reset)s - %%(log_color)s%%(message)s%%(reset)s
+colored_formatter_class = airflow.utils.log.colored_log.CustomTTYColoredFormatter
+
+# Format of Log line
+log_format = [%%(asctime)s] {{%%(filename)s:%%(lineno)d}} %%(levelname)s - %%(message)s
+simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
+
+# Log filename format
+log_filename_template = {{ ti.dag_id }}/{{ ti.task_id }}/{{ ts }}/{{ try_number }}.log
+log_processor_filename_template = {{ filename }}.log
+dag_processor_manager_log_location = /usr/local/airflow/logs/dag_processor_manager/dag_processor_manager.log
+
+# Name of handler to read task instance logs.
+# Default to use task handler.
+task_log_reader = task
+
+# The folder where airflow should store its log files
+# This path must be absolute
+base_log_folder = /usr/local/airflow/logs
+
+# Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
+# Set this to True if you want to enable remote logging.
+remote_logging = False
